@@ -20,7 +20,6 @@ package dk.dbc.scan.service;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
@@ -43,7 +42,7 @@ public class ScanLogic {
 
     private static final Logger log = LoggerFactory.getLogger(ScanLogic.class);
 
-    private static final Iterator EMPTY_ITERATOR = Collections.EMPTY_LIST.iterator();
+    private static final Iterator<?> EMPTY_ITERATOR = List.of().iterator();
 
     @Inject
     Config config;
@@ -79,7 +78,7 @@ public class ScanLogic {
      */
     private synchronized void inFlightDone() {
         hitCountInFlight.decrementAndGet();
-        notify();
+        notifyAll();
     }
 
     /**
@@ -198,7 +197,7 @@ public class ScanLogic {
 
         List<ScanResponse.Term> allResponseTerms = termsFound.stream()
                 .filter(ScanResponse.Term::hasTerms)
-                .collect(Collectors.toList());
+                .toList();
         int totalHitValidated = allResponseTerms.size();
         int validTermCount = Integer.min(count, totalHitValidated);
         List<ScanResponse.Term> responseTerms = allResponseTerms.subList(0, validTermCount);
